Fix some text overflow

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2111,7 +2111,7 @@ br {
 /* #region hint-text */
 
 .o-dim-path-priority {
-  font-size: 1.55rem;
+  font-size: 1.5rem;
   color: white;
   text-shadow:
     -0.1rem -0.1rem 0 black,
