--- a/public/stylesheets/vue-sfc-classes.css
+++ b/public/stylesheets/vue-sfc-classes.css
@@ -3,7 +3,7 @@
 /* HintText.vue */
 
 .o-hint-text {
-  font-size: 1.55rem;
+  font-size: 1.5rem;
   color: white;
   text-shadow:
     -0.1rem -0.1rem 0 black,
